BARC UAT/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>GW_Volunteers__First_Volunteer_Date__c</fullName>
        <inlineHelpText>The first Volunteer Hours Start Date</inlineHelpText>
        <label>First Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Last_Volunteer_Date__c</fullName>
        <inlineHelpText>The latest Volunteer Hours End Date</inlineHelpText>
        <label>Last Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Unique_Volunteer_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Auto_Reminder_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Contact does not want to receive automatic reminder emails about their upcoming shifts.  Used in the &quot;Volunteer Hours Reminder Email&quot; workflow rule.</inlineHelpText>
        <label>Volunteer Auto-Reminder Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Availability__c</fullName>
        <label>Volunteer Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekdays</fullName>
                </value>
                <value>
                    <fullName>Weekends</fullName>
                </value>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Hours__c</fullName>
        <inlineHelpText>Total number of Hours that are Completed. Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Last_Web_Signup_Date__c</fullName>
        <inlineHelpText>The date of the most recent volunteer signup from the web.  Used to trigger workflow for notifications and thank you emails.</inlineHelpText>
        <label>Volunteer Last Web Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Manager_Notes__c</fullName>
        <inlineHelpText>Notes about the volunteer that the volunteer manager or organization staff want to record.</inlineHelpText>
        <label>Volunteer Manager Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Notes__c</fullName>
        <inlineHelpText>Notes from the volunteer.  Note that the web signup form appends the volunteers comments to this field.</inlineHelpText>
        <label>Volunteer Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Organization__c</fullName>
        <inlineHelpText>The organization, company, or group the contact is volunteering on behalf of.</inlineHelpText>
        <label>Volunteer Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
        <inlineHelpText>Select the skill(s) this contact has that should be used to find volunteer jobs.</inlineHelpText>
        <label>Volunteer Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Computer usage</fullName>
                </value>
                <value>
                    <fullName>Manual labor</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Status__c</fullName>
        <label>Volunteer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>New Sign Up</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This field is configured in NPSP Settings &gt; Relationships &gt; Relationships as the Gender field. Do not delete this field unless you remove the reference or select another Gender field there.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Local_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner / Local Operator</label>
        <referenceTo>Local_Operator__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
        <inlineHelpText>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <description>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</inlineHelpText>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <description>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</description>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</inlineHelpText>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</inlineHelpText>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which phone number should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which email should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Primary_Address_Type__c</fullName>
        <description>Which type of address is the mailing address?</description>
        <inlineHelpText>Which type of address is the mailing address?</inlineHelpText>
        <label>Primary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this Contact from any Individual Account processing. If you leave the Account field blank, it will remain blank.</description>
        <inlineHelpText>Excludes this Contact from One to One or Bucket account processing.</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Secondary_Address_Type__c</fullName>
        <description>What type of address is the other address?</description>
        <inlineHelpText>What type of address is the other address?</inlineHelpText>
        <label>Secondary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__SystemAccountProcessor__c</fullName>
        <description>NO LONGER USED - Hidden system field: do not change.  Updated by automatic processes.  See Contacts &amp; Organization settings.</description>
        <inlineHelpText>Indicates which model drives Account relationship behavior: Individual (Bucket) or One-to-One</inlineHelpText>
        <label>DEPRECATED - _SYSTEM: ACCOUNT PROCESSOR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-to-One</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Type_of_Account__c</fullName>
        <description>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</description>
        <formula>IF(Account.npe01__SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__WorkEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__WorkPhone__c</fullName>
        <description>See &apos;Preferred Phone&apos; field.</description>
        <inlineHelpText>See &apos;Preferred Phone&apos; field.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npe01__Work_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Work&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Work&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</inlineHelpText>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See excluded Opportunity Record types, excluded Opportunity types in Household setting for &apos;always roll up to primary&apos; (exclude non individual Accounts).  Do not update.  Updated by automatic process.</description>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdMailingAddress__c</fullName>
        <description>Formula: Clone of the Household Mailing address (also a Formula)</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;,

Account.BillingStreet &amp; BR() &amp;
Account.BillingCity &amp; IF(ISBLANK(Account.BillingCity), &quot;&quot;, &quot;, &quot;) &amp; Account.BillingState &amp; &quot; &quot; &amp; Account.BillingPostalCode 
&amp; IF(ISBLANK(Account.BillingCountry), &quot;&quot;, BR()&amp; Account.BillingCountry),

npo02__Household__r.npo02__Formula_MailingAddress__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdPhone__c</fullName>
        <description>Formula: Simple formula of Household Phone field.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__HouseholdPhone__c,
npo02__Household__r.npo02__HouseholdPhone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household_Naming_Order__c</fullName>
        <label>Household Naming Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>npo02__Household__c</referenceTo>
        <relationshipLabel>Household Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDateHH__c</fullName>
        <description>Formula: Last Close Date field of the related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__LastCloseDate__c,
npo02__Household__r.npo02__LastCloseDate__c)</formula>
        <label>Last Household Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDate__c</fullName>
        <description>System field: do not change. Updated by automatic processes. Do not edit.</description>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipLevel__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipOrigin__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipEndDate__c</fullName>
        <description>Do not change. Updated by automatic processes.</description>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipJoinDate__c</fullName>
        <description>Do not change. Updated by automatic processes.</description>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Naming_Exclusions__c</fullName>
        <description>Determines which household names this contact is NOT included as part of.</description>
        <inlineHelpText>Determines which household names this contact is NOT included as part of.</inlineHelpText>
        <label>Naming Exclusions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household__c.Name</fullName>
                </value>
                <value>
                    <fullName>Household__c.Formal_Greeting__c</fullName>
                </value>
                <value>
                    <fullName>Household__c.Informal_Greeting__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Total Gifts Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYearHH__c</fullName>
        <description>Formula:  Total Gifts Last Year on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__OppAmountLastYear__c,
npo02__Household__r.npo02__OppAmountLastYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYearHH__c</fullName>
        <description>Formula:  Total Gifts This Year on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__OppAmountThisYear__c,
npo02__Household__r.npo02__OppAmountThisYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types. Do not update, updated by automatic process.</description>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Last_Year__c</fullName>
        <inlineHelpText>Total soft credit amount last year.</inlineHelpText>
        <label>Soft Credit Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_This_Year__c</fullName>
        <inlineHelpText>Total soft credit amount this year</inlineHelpText>
        <label>Soft Credit This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Total__c</fullName>
        <inlineHelpText>Total amount in soft credits for this Contact&apos;s lifetime. Defined in the Household Settings tab.</inlineHelpText>
        <label>Soft Credit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Two_Years_Ago__c</fullName>
        <inlineHelpText>Total soft credit amount two years ago.</inlineHelpText>
        <label>Soft Credit Two Years Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__SystemHouseholdProcessor__c</fullName>
        <description>Used to set if Households should get created for all Contacts, or just those which are connected to an individual account.  Deprecated; replaced by HouseholdsSettings npo02__Household_Rules__c</description>
        <label>_SYSTEM: HOUSEHOLD PROCESSOR-DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Individual Contacts</fullName>
                </value>
                <value>
                    <fullName>All New or Edited Contacts</fullName>
                </value>
                <value>
                    <fullName>No Contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Total_Household_Gifts__c</fullName>
        <description>Formula:  Total Gifts on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__TotalOppAmount__c,
npo02__Household__r.npo02__TotalOppAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>